fix [WARNING] PMD Failure: org.synyx.urlaubsverwaltung.absence.web.AbsenceOverviewViewController:180 Rule:UnnecessaryFullyQualifiedName Priority:4 Unnecessary qualifier 'Collectors': 'toList' is already in scope.