@@ -6,7 +6,6 @@ import org.synyx.urlaubsverwaltung.person.Person;
 
 import java.time.Duration;
 import java.util.List;
-import java.util.stream.Collectors;
 
 class OvertimeDetailsMapper {
 
@@ -22,7 +21,7 @@ class OvertimeDetailsMapper {
 
         final List<OvertimeCommentDto> commentDtos = comments.stream()
             .map(OvertimeDetailsMapper::mapComment)
-            .collect(Collectors.toList());
+            .toList();
 
         return new OvertimeDetailsDto(record, commentDtos, totalOvertime, leftOvertime);
     }
